/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Melissa Cabrera
 */

package ucf.assignments;

public class ToDoList {

    private String title;
    private int capacity;

    //set instance variables (title, capacity)
    public ToDoList(String title, int capacity) {
        this.title = title;
        this.capacity = capacity;
    }

    //this method returns the title of the todolist
    public String getTitle() {
        return title;
    }

    //this method return the capacity of the todolist
    public int getCapacity() {
        return capacity;
    }


    public void setTitle(String title) {
        //set new title of the todolist using "this."
    }


    public void setCapacity(int capacity) {
        //setter method for capacity using "this."
    }



}
